# aws-ai-agent-global-hackathon

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  main.py  pyproject.toml
.github/: copilot-instructions.md
agentcore_agents/: invoke_agent.py  invoke_agent_stream.py
agentcore_agents/academia_agent/: README.md  agent.py  requirements.txt
agentcore_agents/test_agent/: main.py
docs/: CLAUDE_AGENT_GUIDANCE.md
frontend/academia-agent/: .eslintignore.backup  .gitignore  ARCHITECTURE.md  AUTH_CARD_UPDATES.md  AUTH_SETUP.legacy.md  AUTH_SETUP.md  COGNITO_QUICKSTART.md  COGNITO_REFERENCE.md  COGNITO_SETUP.md  COGNITO_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_GUIDE.md  QUICKSTART.md  TESTING.md  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
frontend/academia-agent/amplify/: backend.ts
frontend/academia-agent/amplify/auth/: resource.ts
frontend/academia-agent/amplify/data/: resource.ts
frontend/academia-agent/amplify/graphql/: schema.graphql
frontend/academia-agent/app/: globals.css  layout.tsx  page.tsx
frontend/academia-agent/app/chat/: page.tsx
frontend/academia-agent/app/terms/: page.tsx
frontend/academia-agent/components/: auth-card.tsx
frontend/academia-agent/lib/: ._auth.ts  amplifyClient.ts  amplifyInit.tsx  auth.ts  testAmplifyChat.ts  utils.ts
frontend/academia-agent/public/: site.webmanifest
frontend/academia-agent/src/: amplifyHooks.ts  client.ts
frontend/academia-agent/styles/: amplify-overrides.css
frontend/academia-agent/types/: next-auth.d.ts
(+8 files in other folders)
