[project]
name = "aws-ai-agent-global-hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bedrock-agentcore>=0.1.5",
    "bedrock-agentcore-starter-toolkit>=0.1.26",
    "boto3>=1.40.39",
    "ruff>=0.13.2",
    "strands-agents>=1.9.1",
]
